Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P3: Somewhat important
-
Resolution: Done
-
Affects Version/s: 5.9.1
-
Fix Version/s: 5.11.0
-
Component/s: WebSockets
-
Labels:None
-
Commits:416ca205ed89d5edf8cc0e3bb32b404b38f9f2ee
Description
It seems bytesWritten signal in QtWebsocket connected twice :
from http://code.qt.io/cgit/qt/qtwebsockets.git/tree/src/websockets/qwebsocket_p.cpp?h=dev
line 576
{{ QObject::connect(pTcpSocket, &QAbstractSocket::bytesWritten, q, &QWebSocket::bytesWritten);}}
then in line 607 in same function.
also tested with echo client and verified the problem.