QWebSocket: fix bytesWritten being emitted twice

Because it was connect-ed twice.

Task-number: QTBUG-67778
Change-Id: Ia19d2471c148c615faceb7548566d819683c2193
Reviewed-by: Timur Pocheptsov <timur.pocheptsov@qt.io>